@@ -2,6 +2,7 @@
 - Display unauthorized column in form as show action, so show_ui or show override is used if exists
 - Display unauthorized subform with show_ui as show action, to display readonly subform tables
 - Add subform_includes to column, and preload_for_form method to preload associations on edit action, speed up on big forms with long subforms or many nested subforms
+- Speedup on refreshing columns and saving big forms
 
 = 4.1.1
 - Load dartsass-sprockets, so it isn't required in the Gemfile
